# SSH-Hello-World

./: .gitignore  CMakeCache.txt  CMakeLists.txt  SSH Hello World.sln  build-cuda.cmake
SSH Hello World/: Makefile  SSH Hello World.vcxproj  bash.sh  bench.py  convolution.cu  convolution_shared.cu  convolution_shared.h  cubefilling.cu  image_size: 512, kernel_eps_size: 21.txt  image_size_102__kernel_eps_size_21.txt  image_size_153__kernel_eps_size_21.txt  image_size_204__kernel_eps_size_21.txt  image_size_256__kernel_eps_size_21.txt  image_size_307__kernel_eps_size_21.txt  image_size_358__kernel_eps_size_21.txt  image_size_409__kernel_eps_size_21.txt  image_size_460__kernel_eps_size_21.txt  image_size_512__kernel_eps_size_21.txt  image_size_51__kernel_eps_size_21.txt  include_file.h  kernel.cu  kernel_xy_size_13__kernel_eps_size_21.txt  kernel_xy_size_19__kernel_eps_size_21.txt  kernel_xy_size_25__kernel_eps_size_21.txt  kernel_xy_size_31__kernel_eps_size_21.txt  kernel_xy_size_37__kernel_eps_size_21.txt  kernel_xy_size_43__kernel_eps_size_21.txt  kernel_xy_size_49__kernel_eps_size_21.txt  kernel_xy_size_55__kernel_eps_size_21.txt  kernel_xy_size_61__kernel_eps_size_21.txt  kernel_xy_size_73__kernel_eps_size_21.txt  kernel_xy_size_79__kernel_eps_size_21.txt  kernel_xy_size_7__kernel_eps_size_21.txt  kernel_xy_size_97__kernel_eps_size_21.txt  little_cuda_functions.cu  main.cpp
SSH Hello World/benchmark/: bench2.py  image_size_102__kernel_eps_size_21.txt  image_size_153__kernel_eps_size_21.txt  image_size_256__kernel_eps_size_21.txt  image_size_307__kernel_eps_size_21.txt  (+10 more)
(+42 files in other folders)
